# voice-intelligence

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: RecordButton.tsx  SettingsPanel.tsx  StatusBar.tsx  TranscriptDisplay.tsx  VoiceCommandBar.tsx
src/hooks/: useMenuEvents.ts  useRecording.ts  useSettings.ts  useTheme.ts  useWindow.ts
src/lib/: api-keys.ts  audio.ts  claude.ts  deepgram.ts  history.ts  speech.ts
src/types/: tauri.d.ts
