[package]
name = "voice-intelligence"
version = "0.1.0"
description = "Voice Intelligence - Sprache zu Text mit KI-Anreicherung"
authors = ["brandea"]
license = "MIT"
repository = "https://github.com/brandea/voice-intelligence"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voice_intelligence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
keyring = "3"
